<resources>
    <string name="app_name">Smart Car Control</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_server_ip">Server Ip</string>
    <string name="pref_default_ip">192.168.43.161</string>
    <string name="pref_server_ip_key">server_ip</string>
    <string name="pref_server_port_key">server_port</string>
    <string name="pref_default_port">9898</string>
    <string name="pref_title_server_port">Server port</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_erase_image">Erase image</string>
    <string name="pref_header_car">Car tunning</string>
    <string name="pref_default_left_turn_time">300</string>
    <string name="pref_left_turn_time_key">pref_left_turn_time_key</string>
    <string name="pref_title_left_turn_time">Left turn time (ms)</string>
    <string name="pref_default_right_turn_time">300</string>
    <string name="pref_right_turn_time_key">pref_right_turn_time_key</string>
    <string name="pref_title_right_turn_time">Right turn time (ms)</string>
    <string name="pref_default_left_wheel_power">100</string>
    <string name="pref_left_wheel_power_key">pref_left_wheel_power_key</string>
    <string name="pref_title_left_wheel_power">Left wheel power</string>
    <string name="pref_default_right_wheel_power">100</string>
    <string name="pref_right_wheel_power_key">pref_right_wheel_power_key</string>
    <string name="pref_title_right_wheel_power">Right wheel power</string>
    <string name="action_show_car_config">Car config</string>
    <string name="pref_default_move_time">300</string>
    <string name="pref_move_time_key">pref_move_time_key</string>
    <string name="pref_title_move_time">Move time (ms)</string>
    <string name="done">Done</string>
    <string name="action_tomar_foto">Tomar foto</string>

</resources>
