<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="@string/pref_header_data_sync">

        <EditTextPreference
            android:defaultValue="@string/pref_default_ip"
            android:inputType="numberDecimal"
            android:key="@string/pref_server_ip_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server_ip" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_port"
            android:inputType="number"
            android:key="@string/pref_server_port_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server_port" />

    </PreferenceCategory>

</PreferenceScreen>
